--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -13,7 +13,8 @@
     "email": "Email",
     "phone": "Phone",
     "address": "Address",
-    "notes": "Notes"
+    "notes": "Notes",
+    "close": "Close"
   },
   "layout": {
     "myClinicFallback": "My clinic",
@@ -151,6 +152,14 @@
         "appts": "appointment(s)",
         "text": "{{count}} {{apptWord}} · Hours 08:00–20:00 · Click an appointment to view details"
       },
+      "buttons": {
+        "today": "Today",
+        "month": "Month",
+        "week": "Week",
+        "day": "Day"
+      },
+      "allDay": "All day",
+      "more": "+{{count}} more",
       "errors": {
         "load": "Couldn't load the calendar.",
         "indexBuilding": "The calendar index is being created in Firebase. Please wait a moment and click Retry.",
@@ -288,7 +297,7 @@
         "currentMedication": "Current medication (comma separated)"
       },
       "placeholders": {
-        "species": "e.g. dog / cat",
+        "species": "e.g. dog",
         "weightKg": "e.g. 3.9",
         "allergies": "e.g. chicken, dust",
         "chronicIllnesses": "e.g. dermatitis, asthma",
@@ -315,7 +324,8 @@
         "notFound": "Pet not found",
         "load": "Couldn't load the pet",
         "disable": "Couldn't disable the pet",
-        "reactivate": "Couldn't reactivate the pet"
+        "reactivate": "Couldn't reactivate the pet",
+        "uploadPhoto": "Couldn't upload the photo."
       },
       "confirm": {
         "disable": "Disable this pet? You can reactivate it later.",
@@ -351,6 +361,23 @@
         "sex": {
           "male": "Male",
           "female": "Female"
+        }
+      },
+      "photos": {
+        "title": "Photos",
+        "previewAlt": "Pet photo preview",
+        "thumbAlt": "Pet photo",
+        "viewerAlt": "Pet photo",
+        "albumTitle": "Album of {{name}}",
+        "actions": {
+          "openAlbumTitle": "View all photos",
+          "openAlbum": "View album ({{count}})",
+          "open": "Open"
+        },
+        "status": {
+          "uploading": "Uploading…",
+          "loading": "Loading photos…",
+          "empty": "No photos yet."
         }
       }
     }
@@ -409,7 +436,9 @@
         "needAuth": "User not authenticated",
         "dateRequired": "Date is required",
         "reasonRequired": "Reason is required",
-        "save": "Couldn't save"
+        "save": "Couldn't save",
+        "update": "Couldn't save",
+        "create": "Couldn't save"
       }
     }
   },
@@ -428,10 +457,11 @@
     "labels": {
       "clinicName": "Clinic name",
       "clinicAddress": "Clinic address",
-      "email": "Email"
+      "email": "Email",
+      "password": "Password"
     },
-    "hints": {
-      "emailAuth": "If you want to change the login email, it must be updated in Firebase Auth as well."
+    "messages": {
+      "verifyEmailSent": "We sent a verification email to the new address. Please verify it to complete the change."
     },
     "errors": {
       "notAuth": "User not authenticated",
@@ -439,7 +469,24 @@
       "save": "Error saving changes",
       "nameRequired": "Clinic name is required",
       "addressRequired": "Clinic address is required",
-      "emailRequired": "Email is required"
+      "emailRequired": "Email is required",
+      "verifyNewEmailRequired": "Please verify the new email address to complete the change.",
+      "emailAlreadyInUse": "This email is already in use.",
+      "invalidEmail": "Invalid email."
+    },
+    "reauth": {
+      "title": "Confirm your identity",
+      "description": "For security, enter your password to continue.",
+      "passwordPlaceholder": "••••••••",
+      "actions": {
+        "confirm": "Confirm",
+        "confirming": "Confirming…"
+      },
+      "errors": {
+        "wrongPassword": "Incorrect password.",
+        "requiresRecentLogin": "Please sign in again and try.",
+        "generic": "Couldn't confirm your identity. Please try again."
+      }
     }
   }
 }
